<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

   <RelativeLayout 
  			android:layout_width="match_parent"
  			android:layout_height="45dp"
  			android:id="@+id/title"
  			android:layout_alignParentTop="true">  
      		<TextView
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:text="@string/register"
        		android:textSize="20sp"		
				android:layout_centerInParent="true"/>
      
	</RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNum" />

    <EditText
        android:id="@+id/edt_username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phoneNum" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/edt_userpassword_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/pwHint">
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/passwordConfirm" />

    <EditText
        android:id="@+id/edt_userpassword_register_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/pwConfirm">
    </EditText>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />
    
    <ProgressBar 
            android:id="@+id/progras_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>


</LinearLayout>