<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

   <RelativeLayout 
  			android:layout_width="match_parent"
  			android:layout_height="45dp"
  			android:id="@+id/title"
  			android:layout_alignParentTop="true">  
      		<TextView
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:text="@string/login"
        		android:textSize="20sp"		
				android:layout_centerInParent="true"/>
      
	</RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/edt_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="15866668888" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/edt_userpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/pwHint">
    </EditText>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView 
        android:id="@+id/txt_goRegister"      
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:clickable="true"
        android:textSize="25dip"
        android:text="@string/goRegister"
        android:textColor="#ff0000" />
    <ProgressBar 
            android:id="@+id/progras_post_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    

</LinearLayout>