<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout 
        android:id="@+id/lnl_search"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	android:orientation="horizontal">
        
	        <TextView 
	        android:id="@+id/tv_input_location"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="输入地点"
	        android:layout_weight="1"
	        android:clickable="true"/>
            <Button 
    	    android:id="@+id/btn_routePlan"
	    	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="#99ccff"    
        	android:layout_weight="3"	   	
        	android:text="@string/routePlan"/>
	        

    </LinearLayout>
    
		<LinearLayout      	
		    android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dip"
            android:layout_alignParentBottom="true"
            >
          <LinearLayout 
            android:id="@+id/route_bar"  
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:visibility="gone"
              >  
           <TextView 
	        android:id="@+id/lineDetails"
	        android:layout_width="240dp"
            android:layout_height="match_parent"
            android:gravity="center"
	        />

           <Button
               android:id="@+id/btn_start_navi"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:clickable="true"
               android:gravity="center"
               android:text="@string/start_navi" />

            <ImageButton
                android:id="@+id/pre_view"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:src="@drawable/pre" />

           </LinearLayout>
         <LinearLayout 
             android:id="@+id/lnl_bottom_menu"
             android:layout_width="match_parent"
            android:layout_height="match_parent"
             >  
      	<LinearLayout
          	android:layout_width="match_parent"
          	android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button 
      		    android:id="@+id/btn_message"
      		    android:layout_width="match_parent"
      		    android:layout_height="match_parent"
      		    android:text="@string/message" />     
       	</LinearLayout> 
      
       <LinearLayout
     	android:layout_width="match_parent"
     	android:layout_height="match_parent"
       android:gravity="center_horizontal"
       android:orientation="vertical"
       android:layout_weight="1">
       <Button 
           android:id="@+id/btn_mifi"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/mifi"
           android:textSize="16sp"/>       
       </LinearLayout>
       <LinearLayout
     	android:layout_width="match_parent"
     	android:layout_height="match_parent"
       android:gravity="center_horizontal"
       android:orientation="vertical"
       android:layout_weight="1">
       <Button 
           android:id="@+id/btn_me"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/me"
           android:textSize="16sp"/>    
           </LinearLayout>   
       </LinearLayout>     
    </LinearLayout>
    	<com.baidu.mapapi.map.MapView
	    android:id="@+id/bmapView"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
		android:layout_below="@id/lnl_search"
	    android:layout_above="@+id/bottom_bar"
	    android:clickable="true"/>

    	<Button
    	    android:id="@+id/myLocation"
    	    android:layout_width="64dp"
    	    android:layout_height="64dp"
    	    android:layout_alignBottom="@+id/bmapView"
    	    android:layout_alignParentLeft="true"
    	    android:layout_marginBottom="84dp"
    	    android:text="@string/myLocation" />

</RelativeLayout>